[project]
name = "concept-atlas"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicholas Miles",email = "nicholas.miles6@gmail.com"}
]
license = {text = "GNU General Public License v3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.99.9,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "transformers (>=4.55.0,<5.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.poetry]
packages = [
    {include = "concept_atlas", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
